// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is false and there is a training job 1`] = `
.emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  height: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-4:hover div,
.emotion-4:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-4:hover button,
.emotion-4:focus-within button {
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-6 {
  position: absolute;
  right: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-6:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-7:before {
  content: ' ';
  position: absolute;
  top: -6px;
  right: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

<div
  className="emotion-0"
>
  <FaceLebalingMessage
    error=""
    jobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    previousJobId="1a1d45af-7477-1396-ae57-a618e8efb91f"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  >
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Override Current Training & Re-apply
    </button>
    <div
      className="emotion-4"
    >
      <button
        aria-details="TrainingHelp"
        aria-label="Training Help"
        className="emotion-5"
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-6"
        id="TrainingHelp"
        role="tooltip"
      >
        <div
          className="emotion-7"
        />
        There are new labels that have not been used for training. Restart training with the latest labels.
      </div>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is true and there is no training job 1`] = `
.emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  height: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-4:hover div,
.emotion-4:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-4:hover button,
.emotion-4:focus-within button {
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-6 {
  position: absolute;
  right: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-6:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-7:before {
  content: ' ';
  position: absolute;
  top: -6px;
  right: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

<div
  className="emotion-0"
>
  <FaceLebalingMessage
    error=""
    jobId=""
    previousJobId=""
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  >
    <button
      aria-disabled={true}
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <div
      className="emotion-4"
    >
      <button
        aria-details="TrainingHelp"
        aria-label="Training Help"
        className="emotion-5"
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-6"
        id="TrainingHelp"
        role="tooltip"
      >
        <div
          className="emotion-7"
        />
        There are new labels. Click to train and apply.
      </div>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingTrainApply /> should render properly when unapplied changes is true and there is no training job 2`] = `
.emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  height: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-4:hover div,
.emotion-4:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-4:hover button,
.emotion-4:focus-within button {
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-6 {
  position: absolute;
  right: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-6:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-7:before {
  content: ' ';
  position: absolute;
  top: -6px;
  right: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

<div
  className="emotion-0"
>
  <FaceLebalingMessage
    error=""
    jobId=""
    previousJobId=""
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setPreviousJobId={[Function]}
  />
  <span>
    Once a name has been added to a face, training can begin. Names can continue to be edited as needed.
  </span>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  >
    <button
      aria-disabled={true}
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <div
      className="emotion-4"
    >
      <button
        aria-details="TrainingHelp"
        aria-label="Training Help"
        className="emotion-5"
        type="button"
      >
        <svg
          data-file-name="help.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-6"
        id="TrainingHelp"
        role="tooltip"
      >
        <div
          className="emotion-7"
        />
        There are new labels. Click to train and apply.
      </div>
    </div>
  </div>
</div>
`;
